[gd_scene load_steps=2 format=3 uid="uid://d4c28gwm3vhmm"]

[ext_resource type="Script" path="res://Scenes/pipe_spawner.gd" id="1_wqqgt"]

[node name="PipeSpawner" type="Node2D"]
script = ExtResource("1_wqqgt")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
